Corrige o erro "Undefined index: order_id"
Corrige o bug com geo zone e valor mínimo para a forma de pagamento

Remove o desconto e acréscimo em novos pedidos

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -63,7 +63,7 @@ $('#button-confirm').click(function(){
                     
                     $.ajax({
                     url: 'index.php?route=extension/payment/pagseguro_boleto/confirm',
-                    data: 'status=' + json.status,
+                    data: 'status=' + json.status + "&order_id=" + data.order_id,
                     type: 'POST',
                     success: function (){
                         setTimeout(function(){
