--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -147,7 +147,7 @@
           </div>
 
           <div class="tab-pane" id="tab-order-status">
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-pending" class="control-label col-sm-2">entry_order_status_pending</label>
               <div class="col-sm-10">
                 <select name="order_status_pending" id="input-order-status-pending" class="form-control">
@@ -156,7 +156,7 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-pending" class="control-label col-sm-2">entry_order_status_analysing</label>
               <div class="col-sm-10">
                 <select name="order_status_pending" id="input-order-status-pending" class="form-control">
@@ -165,38 +165,43 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-paid" class="control-label col-sm-2">entry_order_status_paid</label>
               <div class="col-sm-10">
-                <select name="order_status_paid" id="input-order-status-paid" class="form-control"></select>
+                <select name="order_status_paid" id="input-order-status-paid" class="form-control">
+                  <option value="">Pending</option></select>
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-available" class="control-label col-sm-2">entry_order_status_available</label>
               <div class="col-sm-10">
-                <select name="order_status_paid" id="input-order-status-available" class="form-control"></select>
+                <select name="order_status_paid" id="input-order-status-available" class="form-control">
+                  <option value="">Pending</option></select>
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-disputed" class="control-label col-sm-2">entry_order_status_disputed</label>
               <div class="col-sm-10">
-                <select name="order_status_disputed" id="input-order-status-disputed" class="form-control"></select>
+                <select name="order_status_disputed" id="input-order-status-disputed" class="form-control">
+                  <option value="">Pending</option></select>
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-returned" class="control-label col-sm-2">entry_order_status_returned</label>
               <div class="col-sm-10">
-                <select name="order_status_returned" id="input-order-status-returned" class="form-control"></select>
+                <select name="order_status_returned" id="input-order-status-returned" class="form-control">
+                  <option value="">Pending</option></select>
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-order-status-cancelled" class="control-label col-sm-2">entry_order_status_cancelled</label>
               <div class="col-sm-10">
-                <select name="order_status_cancelled" id="input-order-status-cancelled" class="form-control"></select>
+                <select name="order_status_cancelled" id="input-order-status-cancelled" class="form-control">
+                  <option value="">Pending</option></select>
               </div>
             </div>
           </div>
@@ -230,24 +235,24 @@
           </div>
 
           <div class="tab-pane" id="tab-installment">
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-installment-total" class="control-label col-sm-2">entry_installment_total</label>
               <div class="col-sm-10">
-                <input type="number" name="installment_total" id="input-installment-total" class="form-control" />
+                <input type="number" name="installment_total" id="input-installment-total" class="form-control" required />
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-installment-free" class="control-label col-sm-2">entry_installment_free</label>
               <div class="col-sm-10">
-                <input type="number" name="installment_free" id="input-installment-free" class="form-control" />
+                <input type="number" name="installment_free" id="input-installment-free" class="form-control" required />
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-installment-minimum-value" class="control-label col-sm-2">entry_installment_minimum_value</label>
               <div class="col-sm-10">
-                <input type="number" name="installment_minimum_value" id="input-installment-minimum-value" class="form-control" />
+                <input type="number" name="installment_minimum_value" id="input-installment-minimum-value" class="form-control" required />
               </div>
             </div>
           </div>
