refactor: adiciona animação para esconder botões
Ao clicar na aba _Debug_, exibe os botões para
_download_ e limpeza do arquivo de _debug_

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -356,4 +356,20 @@
     </div>
   </div>
 </div>
+
+<script>
+  $('a[data-toggle="tab"]').on('show.bs.tab', function(e) {
+    if (e.target.href.endsWith('#tab-debug')) {
+      $('#debug-clear, #debug-download').fadeIn()
+    } else {
+      $('#debug-clear, #debug-download').fadeOut()
+    }
+  })
+</script>
+
+<style>
+#debug-clear, #debug-download {
+  display: none
+}
+</style>
 {{ footer }}
