refactor: adiciona _bredcrumbs_

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -40,7 +40,7 @@
           <li><a href="#tab-debug" data-toggle="tab">tab_debug</a></li>
         </ul>
 
-        <form action="#" class="form form-horizontal tab-content" id="form" method="POST">
+        <form action="{{ action }}" class="form form-horizontal tab-content" id="form-payment" method="POST">
           <div class="tab-pane active" id="tab-home">
             <div class="form-group required">
               <label for="input-status" class="control-label col-sm-2">entry_status</label>
