--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -31,6 +31,7 @@
       <div class="panel-body">
         <ul class="nav nav-tabs" role="tablist">
           <li class="active"><a href="#tab-home" data-toggle="tab">tab_home</a></li>
+          <li><a href="#tab-custom-fields" data-toggle="tab">tab_custom_fields</a></li>
           <li><a href="#tab-discount" data-toggle="tab">tab_discount</a></li>
           <li><a href="#tab-order-status" data-toggle="tab">tab_order_status</a></li>
           <li><a href="#tab-geo" data-toggle="tab">tab_geo</a></li>
@@ -90,6 +91,29 @@
               <label for="input-customer-notify" class="control-label col-sm-2">entry_callback_token</label>
               <div class="col-sm-10">
                 <input type="text" name="callback_token" class="form-control">
+              </div>
+            </div>
+          </div>
+
+          <div class="tab-pane" id="tab-custom-fields">
+            <div class="form-group">
+              <label for="input-custom-fields-cpf" class="control-label col-sm-2">CPF</label>
+              <div class="col-sm-10">
+                <select name="custom_fields_cpf" id="input-custom-fields-cpf" class="form-control"></select>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="input-custom-fields-number" class="control-label col-sm-2">Número Residencial</label>
+              <div class="col-sm-10">
+                <select name="custom_fields_number" id="input-custom-fields-number" class="form-control"></select>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="input-custom-fields-birthday" class="control-label col-sm-2">Data de Nascimento</label>
+              <div class="col-sm-10">
+                <select name="custom_fields_birthday" id="input-custom-fields-birthday" class="form-control"></select>
               </div>
             </div>
           </div>
