--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -47,11 +47,11 @@
               <label for="input-status" class="control-label col-sm-2">entry_status</label>
               <div class="col-sm-10">
                 <select name="status" id="input-status" class="form-control">
-                  <option value="1">text_enabled</option>
-                  <option value="0">text_disabled</option>
+                  <option value="1" {{ status ?? 'selected' }}>text_enabled</option>
+                  <option value="0" {{ status ?: 'selected' }}>text_disabled</option>
                 </select>
-                {% if error_status %}
-                <span class="text-danger">{{ error_status }}</span>
+                {% if error_field_status %}
+                <span class="text-danger">{{ error_field_status }}</span>
                 {% endif %}
               </div>
             </div>
@@ -59,9 +59,9 @@
             <div class="form-group required">
               <label for="input-email" class="control-label col-sm-2">entry_email</label>
               <div class="col-sm-10">
-                <input type="email" name="email" id="input-email" class="form-control" required />
-                {% if error_email %}
-                <span class="text-danger">{{ error_email }}</span>
+                <input type="email" name="email" id="input-email" value="{{ email }}" class="form-control" required />
+                {% if error_field_email is defined %}
+                <span class="text-danger">{{ error_field_email }}</span>
                 {% endif %}
               </div>
             </div>
@@ -69,9 +69,9 @@
             <div class="form-group required">
               <label for="input-token" class="control-label col-sm-2">entry_token</label>
               <div class="col-sm-10">
-                <input type="text" name="token" id="input-token" class="form-control" required />
-                {% if error_token %}
-                <span class="text-danger">{{ error_token }}</span>
+                <input type="text" name="token" id="input-token" value="{{ token }}" class="form-control" required />
+                {% if error_field_token %}
+                <span class="text-danger">{{ error_field_token }}</span>
                 {% endif %}
               </div>
             </div>
@@ -80,11 +80,11 @@
               <label for="input-sandbox" class="control-label col-sm-2">entry_sandbox</label>
               <div class="col-sm-10">
                 <select name="sandbox" id="input-sandbox" class="form-control">
-                  <option value="1">text_enabled</option>
-                  <option value="0">text_disabled</option>
+                  <option value="1" {{ sandbox ?? 'selected' }}>text_enabled</option>
+                  <option value="0" {{ sandbox ?: 'selected' }}>text_disabled</option>
                 </select>
-                {% if error_sandbox %}
-                <span class="text-danger">{{ error_sandbox }}</span>
+                {% if error_field_sandbox %}
+                <span class="text-danger">{{ error_field_sandbox }}</span>
                 {% endif %}
               </div>
             </div>
@@ -93,11 +93,11 @@
               <label for="input-customer-notify" class="control-label col-sm-2">entry_customer_notify</label>
               <div class="col-sm-10">
                 <select name="customer_notify" id="input-customer-notify" class="form-control">
-                  <option value="1">text_enabled</option>
-                  <option value="0">text_disabled</option>
+                  <option value="1" {{ customer_notify ?? 'selected' }}>text_enabled</option>
+                  <option value="0" {{ customer_notify ?: 'selected' }}>text_disabled</option>
                 </select>
-                {% if error_notify %}
-                <span class="text-danger">{{ error_notify }}</span>
+                {% if error_field_notify %}
+                <span class="text-danger">{{ error_field_notify }}</span>
                 {% endif %}
               </div>
             </div>
@@ -105,9 +105,9 @@
             <div class="form-group required">
               <label for="input-customer-notify" class="control-label col-sm-2">entry_callback_token</label>
               <div class="col-sm-10">
-                <input type="text" name="callback_token" class="form-control">
-                {% if error_callback_token %}
-                <span class="text-danger">{{ error_callback_token }}</span>
+                <input type="text" name="callback_token" value="{{ callback_token }}" class="form-control">
+                {% if error_field_callback_token %}
+                <span class="text-danger">{{ error_field_callback_token }}</span>
                 {% endif %}
               </div>
             </div>
@@ -195,8 +195,8 @@
                 <select name="order_status_pending" id="input-order-status-pending" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_pending %}
-                <span class="text-danger">{{ error_order_status_pending }}</span>
+                {% if error_field_order_status_pending %}
+                <span class="text-danger">{{ error_field_order_status_pending }}</span>
                 {% endif %}
               </div>
             </div>
@@ -207,8 +207,8 @@
                 <select name="order_status_analysing" id="input-order-status-pending" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_analysing %}
-                <span class="text-danger">{{ error_order_status_analysing }}</span>
+                {% if error_field_order_status_analysing %}
+                <span class="text-danger">{{ error_field_order_status_analysing }}</span>
                 {% endif %}
               </div>
             </div>
@@ -219,8 +219,8 @@
                 <select name="order_status_paid" id="input-order-status-paid" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_paid %}
-                <span class="text-danger">{{ error_order_status_paid }}</span>
+                {% if error_field_order_status_paid %}
+                <span class="text-danger">{{ error_field_order_status_paid }}</span>
                 {% endif %}
               </div>
             </div>
@@ -231,8 +231,8 @@
                 <select name="order_status_available" id="input-order-status-available" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_available %}
-                <span class="text-danger">{{ error_order_status_available }}</span>
+                {% if error_field_order_status_available %}
+                <span class="text-danger">{{ error_field_order_status_available }}</span>
                 {% endif %}
               </div>
             </div>
@@ -243,8 +243,8 @@
                 <select name="order_status_disputed" id="input-order-status-disputed" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_disputed %}
-                <span class="text-danger">{{ error_order_status_disputed }}</span>
+                {% if error_field_order_status_disputed %}
+                <span class="text-danger">{{ error_field_order_status_disputed }}</span>
                 {% endif %}
               </div>
             </div>
@@ -255,8 +255,8 @@
                 <select name="order_status_returned" id="input-order-status-returned" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_returned %}
-                <span class="text-danger">{{ error_order_status_returned }}</span>
+                {% if error_field_order_status_returned %}
+                <span class="text-danger">{{ error_field_order_status_returned }}</span>
                 {% endif %}
               </div>
             </div>
@@ -267,8 +267,8 @@
                 <select name="order_status_cancelled" id="input-order-status-cancelled" class="form-control">
                   <option value="">Pending</option>
                 </select>
-                {% if error_order_status_cancelled %}
-                <span class="text-danger">{{ error_order_status_cancelled }}</span>
+                {% if error_field_order_status_cancelled %}
+                <span class="text-danger">{{ error_field_order_status_cancelled }}</span>
                 {% endif %}
               </div>
             </div>
@@ -307,8 +307,8 @@
               <label for="input-installment-total" class="control-label col-sm-2">entry_installment_total</label>
               <div class="col-sm-10">
                 <input type="number" name="installment_total" id="input-installment-total" class="form-control" required />
-                {% if error_installment_total %}
-                <span class="text-danger">{{ error_installment_total }}</span>
+                {% if error_field_installment_total %}
+                <span class="text-danger">{{ error_field_installment_total }}</span>
                 {% endif %}
               </div>
             </div>
@@ -317,8 +317,8 @@
               <label for="input-installment-free" class="control-label col-sm-2">entry_installment_free</label>
               <div class="col-sm-10">
                 <input type="number" name="installment_free" id="input-installment-free" class="form-control" required />
-                {% if error_installment_free %}
-                <span class="text-danger">{{ error_installment_free }}</span>
+                {% if error_field_installment_free %}
+                <span class="text-danger">{{ error_field_installment_free }}</span>
                 {% endif %}
               </div>
             </div>
@@ -327,8 +327,8 @@
               <label for="input-installment-minimum-value" class="control-label col-sm-2">entry_installment_minimum_value</label>
               <div class="col-sm-10">
                 <input type="number" name="installment_minimum_value" id="input-installment-minimum-value" class="form-control" required />
-                {% if error_installment_minimum_value %}
-                <span class="text-danger">{{ error_installment_minimum_value }}</span>
+                {% if error_field_installment_minimum_value %}
+                <span class="text-danger">{{ error_field_installment_minimum_value }}</span>
                 {% endif %}
               </div>
             </div>
@@ -351,7 +351,7 @@
               <div class="form-group">
                 <label for="input-methods-boleto-minimum-amount" class="control-label col-sm-2">entry_minimum_amount</label>
                 <div class="col-sm-10">
-                  <input type="number" name="methods_boelto_minimum_amount" id="input-methods-boelto-minimum-amount" class="form-control" />
+                  <input type="number" name="methods_boleto_minimum_amount" id="input-methods-boleto-minimum-amount" class="form-control" />
                 </div>
               </div>
             </fieldset>
@@ -404,8 +404,8 @@
               <label for="input-layout" class="control-label col-sm-2">entry_layout</label>
               <div class="col-sm-10">
                 <select name="layout" id="input-layout" class="form-control"></select>
-                {% if error_layout %}
-                <span class="text-danger">{{ error_layout }}</span>
+                {% if error_field_layout %}
+                <span class="text-danger">{{ error_field_layout }}</span>
                 {% endif %}
               </div>
             </div>
