--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -59,7 +59,7 @@
             <div class="form-group required">
               <label for="input-email" class="control-label col-sm-2">{{ entry_email }}</label>
               <div class="col-sm-10">
-                <input type="email" name="email" id="input-email" value="{{ email }}" class="form-control" required />
+                <input type="email" name="email" id="input-email" value="{{ email }}" placeholder="{{ entry_email }}" class="form-control" required />
                 {% if error_field_email is defined %}
                 <span class="text-danger">{{ error_field_email }}</span>
                 {% endif %}
@@ -69,7 +69,7 @@
             <div class="form-group required">
               <label for="input-token" class="control-label col-sm-2">{{ entry_token }}</label>
               <div class="col-sm-10">
-                <input type="text" name="token" id="input-token" value="{{ token }}" class="form-control" required />
+                <input type="text" name="token" id="input-token" value="{{ token }}" placeholder="{{ entry_token }}" class="form-control" required />
                 {% if error_field_token %}
                 <span class="text-danger">{{ error_field_token }}</span>
                 {% endif %}
