--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -547,7 +547,7 @@
               <label for="input-layout" class="control-label col-sm-2">{{ entry_layout_credit }}</label>
               <div class="col-sm-10">
                 <select name="layout" id="input-layout" class="form-control">
-                  <option value="default">text_default</option>
+                  <option value="default">{{ text_default }}</option>
                 </select>
 
                 {% if error_field_layout %}
@@ -562,15 +562,19 @@
           <!-- --------- -->
           <div class="tab-pane" id="tab-debug">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-3">
+                <input type="date" class="form-control" />
+              </div>
+
+              <div class="col-sm-3">
                 <a class="btn btn-default btn-lg btn-block">Portfolio</a>
               </div>
 
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <a class="btn btn-default btn-lg btn-block">GitHub</a>
               </div>
 
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <a class="btn btn-default btn-lg btn-block">Documentação</a>
               </div>
             </div>
