refactor: adiciona filtro de log

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -563,7 +563,7 @@
           <div class="tab-pane" id="tab-debug">
             <div class="row">
               <div class="col-sm-3">
-                <input type="date" class="form-control" />
+                <input type="text" class="form-control" id="filter-log-date" />
               </div>
 
               <div class="col-sm-3">
@@ -619,11 +619,42 @@
 
     $(floats.join(',')).mask("#.00", {reverse: true});
   })
+
+  $(function() {
+    $('#filter-log-date').datetimepicker({
+      format: 'YYYY-MM-DD',
+      date: '{{ logs_date|last }}',
+      enabledDates: JSON.parse('{{ logs_date|json_encode }}'),
+      icons: {
+        previous: 'fa fa-arrow-left',
+        next: 'fa fa-arrow-right',
+      }
+    })
+    .on('dp.change', function(newDate, oldDate) {
+      loadLog(newDate.currentTarget.value)
+    })
+
+    loadLog('{{ logs_date|last }}')
+  })
+
+  function loadLog(date) {
+    fetch(`/admin/index.php?route=extension/payment/pagseguro/log&user_token=${getURLVar('user_token')}&date=${date}`)
+      .then(response => response.text())
+      .then(response => {
+        const code = document.querySelector('#tab-debug pre > code')
+        code.innerHTML = '';
+        code.insertAdjacentHTML('beforeEnd', response)
+      })
+  }
 </script>
 
 <style>
 #debug-clear, #debug-download {
   display: none
+}
+
+.day:not([disabled]) {
+  background: #337ab76b;
 }
 </style>
 {{ footer }}
